primer esquema de blueprints

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -i https://test.pypi.org/simple/ --extra-index-url=https://pypi.org/simple azure-datalake-utils==0.2.0.dev23"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -21,40 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found existing installation: azure-datalake-utils 0.5.1\n",
-      "Uninstalling azure-datalake-utils-0.5.1:\n",
-      "  Successfully uninstalled azure-datalake-utils-0.5.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip uninstall azure-datalake-utils -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Package(s) not found: azure-datalake-utils\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip show azure-datalake-utils"
+    "# remover comentarios si sed quiere instalar la libreria \n",
+    "# publicada en pipy\n",
+    "#%pip uninstall azure-datalake-utils -y\n",
+    "#%pip install -i https://test.pypi.org/simple/ --extra-index-url=https://pypi.org/simple azure-datalake-utils==0.2.0.dev23\n",
+    "#%pip show azure-datalake-utils"
    ]
   },
   {
