prueba de concepto core completada

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,35 +38,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import azure.functions as func \n",
+    "from mod_test import *\n",
+    "from centraal_dataframework.blueprints import framework\n",
+    "\n",
+    "app = func.FunctionApp() \n",
+    "app.register_functions(framework) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call the function.\n",
+    "a = app.get_functions()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trigger = a[1].get_user_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# task_module.py\n",
-    "\n",
-    "# Step 1: Define the task decorator\n",
-    "task_registry = []\n",
-    "\n",
-    "def task(func):\n",
-    "    task_registry.append(func)\n",
-    "    return func\n",
-    "\n",
-    "# Step 4: Provide a way to run all registered tasks\n",
-    "def run_tasks():\n",
-    "    for task_func in task_registry:\n",
-    "        task_func()\n",
-    "\n",
-    "# Example usage of the module\n",
-    "\n",
-    "# Usage:\n",
-    "# Import the module in another script\n",
-    "# from task_module import task, run_tasks\n",
-    "\n",
-    "# Decorate tasks\n",
-    "@task\n",
-    "def greet():\n",
-    "    print(\"Hello, World!\")"
+    "from azure.functions import QueueMessage\n",
+    "msg= QueueMessage(body = bytes(\"hello\",  \"utf-8\"))\n",
+    "trigger(msg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
