--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -71,12 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello there, iam a task\n"
+     ]
+    }
+   ],
    "source": [
     "from azure.functions import QueueMessage\n",
-    "msg= QueueMessage(body = bytes(\"hello\",  \"utf-8\"))\n",
+    "msg= QueueMessage(body = bytes(\"greetins\",  \"utf-8\"))\n",
     "trigger(msg)"
    ]
   },
