--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -29,16 +29,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "import sys\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "sys.path.append('../')"
+    "sys.path.append('../')\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +68,12 @@
     "from centraal_dataframework.blueprints import framework\n",
     "\n",
     "app = func.FunctionApp() \n",
-    "app.register_functions(framework) \n"
+    "app.register_functions(framework)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,25 +96,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "hello there, iam a task\n"
+      "2023-10-09 10:00:43,479 - hello_datalake - INFO -    Unnamed: 0  Producto 2023-07-01 2023-08-01 2023-09-01 2023-10-01  \\\n",
+      "0           0   9002263      237,0      700,0     3200,0     3200,0   \n",
+      "\n",
+      "  2023-11-01 2023-12-01 2024-01-01 2024-02-01 2024-03-01 2024-04-01  \\\n",
+      "0     3200,0     2920,0     2920,0      398,0      336,0      295,0   \n",
+      "\n",
+      "  2024-05-01 2024-06-01  \n",
+      "0      336,0      224,0  \n",
+      "2023-10-09 10:00:43,489 - hello_datalake - INFO - hello there, iam a task\n"
      ]
     }
    ],
    "source": [
     "from azure.functions import QueueMessage\n",
-    "msg= QueueMessage(body = bytes(\"greetins\",  \"utf-8\"))\n",
+    "msg= QueueMessage(body = bytes(\"hello_datalake\",  \"utf-8\"))\n",
     "trigger(msg)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
