completar poc WIP: verificar como integrarlo al framework

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -44,6 +44,8 @@
     "```\n",
     "datalake=\"nombre_datalake_cuenta\"\n",
     "datalake_key=\"xxxkey_datalake_cuenta_zxccxxcx\"\n",
+    "AZURE_STORAGE_CONNECTION_STRING=\"aaaa\"\n",
+    "CONTENEDOR_VALIDACIONES=\"calidad-datos\" # debe existir en la cuenta.\n",
     "````"
    ]
   },
@@ -70,75 +72,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from centraal_dataframework.resources import datalake\n",
-    "info = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\")"
+    "info = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\", decimal = \",\").drop(columns=['Unnamed: 0'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import great_expectations as gx\n",
-    "\n",
-    "context = gx.get_context(mode = \"ephemeral\")\n",
-    "datasource = context.sources.add_pandas(name=\"my_pandas_datasource\")\n",
-    "data_asset = datasource.add_dataframe_asset(name=\"test\")\n",
-    "my_batch_request = data_asset.build_batch_request(dataframe=info)"
+    "from great_expectations.core.expectation_configuration import ExpectationConfiguration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/german/repos/centraal-dataframework/.venv/lib/python3.8/site-packages/great_expectations/expectations/expectation.py:1481: UserWarning: `result_format` configured at the Validator-level will not be persisted. Please add the configuration to your Checkpoint config or checkpoint_run() method instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "552041ed29584c4ca202475aecbbbf80",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Calculating Metrics:   0%|          | 0/6 [00:00<?, ?it/s]"
+       "(130, 13)"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "context.add_or_update_expectation_suite(\"my_expectation_suite\")\n",
-    "validator = context.get_validator(\n",
-    "    batch_request=my_batch_request,\n",
-    "    expectation_suite_name=\"my_expectation_suite\",\n",
-    ")\n",
-    "validator.expect_column_values_to_not_be_null(\"Producto\")\n",
-    "validator.save_expectation_suite()"
+    "info.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from centraal_dataframework.resources import context\n",
+    "scrapping_suite = context.add_or_update_expectation_suite(expectation_suite_name=\"expectation_suite_name\")\n",
+    "check_point = context.add_or_update_checkpoint(name=\"my_checkpoint\", expectation_suite_name=scrapping_suite.name)\n",
+    "datasource = context.sources.add_or_update_pandas(name='my_datasource')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creaciones de expectativas\n",
+    "\n",
+    "expectation_1 = ExpectationConfiguration(\n",
+    "    expectation_type=\"expect_table_columns_to_match_set\",\n",
+    "    kwargs={'column_set': ['Producto', '2023-07-01', '2023-08-01', '2023-09-01', '2023-10-01',\n",
+    "       '2023-11-01', '2023-12-01', '2024-01-01', '2024-02-01', '2024-03-01',\n",
+    "       '2024-04-01', '2024-05-01', '2024-06-01']},\n",
+    "    meta={\n",
+    "        \"notes\": {\n",
+    "            \"format\": \"markdown\",\n",
+    "            \"content\": \"Ejemplo de expectativa\",\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
+    "expectation_2 = ExpectationConfiguration(\n",
+    "    expectation_type = \"expect_column_values_to_not_be_null\",\n",
+    "    kwargs = {\"column\" : \"Producto\"} \n",
+    ")\n",
+    "\n",
+    "expectation_3 = ExpectationConfiguration(\n",
+    "    expectation_type = \"expect_table_row_count_to_be_between\",\n",
+    "    kwargs = {\"max_value\" : 160, \"min_value\": 131},\n",
+    "     meta={\n",
+    "        \"notes\": {\n",
+    "            \"format\": \"markdown\",\n",
+    "            \"content\": \"**Ejemplo de expectativa** que va fallar\",\n",
+    "        }\n",
+    "     }\n",
+    ")\n",
+    "\n",
+    "# adicionar las execptativas\n",
+    "for exp in [expectation_1, expectation_2, expectation_3]:\n",
+    "    scrapping_suite.add_expectation(exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'expectations/expectation_suite_name.json'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context.save_expectation_suite(scrapping_suite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_asset = datasource.add_dataframe_asset(name=\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd9cdaba2af94a418251df51f2f8dab2",
+       "model_id": "97b11c08d1994a93955097adf95f96af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,39 +212,41 @@
     }
    ],
    "source": [
-    "checkpoint = context.add_or_update_checkpoint(\n",
-    "    name=\"my_checkpoint\",\n",
-    "    validations=[\n",
-    "        {\n",
-    "            \"batch_request\": my_batch_request,\n",
-    "            \"expectation_suite_name\": \"my_expectation_suite\",\n",
-    "        },\n",
-    "    ],\n",
-    ")\n",
-    "checkpoint_result = checkpoint.run()"
+    "result = context.run_checkpoint(\n",
+    "    checkpoint_name=check_point.name,\n",
+    "    batch_request=data_asset.build_batch_request(dataframe=info),\n",
+    "    expectation_suite_name = scrapping_suite.name\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_site_urls_list = context.get_docs_sites_urls(resource_identifier=list(result.run_results.keys())[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Start : This command cannot be run due to the error: The system cannot find the file specified.\n",
-      "At line:1 char:1\n",
-      "+ Start \"file:///tmp/tmpd3pptoh6/validations/my_expectation_suite/__non ...\n",
-      "+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "    + CategoryInfo          : InvalidOperation: (:) [Start-Process], InvalidOperationException\n",
-      "    + FullyQualifiedErrorId : InvalidOperationException,Microsoft.PowerShell.Commands.StartProcessCommand\n",
-      " \n"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://centraaldl.z13.web.core.windows.net/validations/expectation_suite_name/__none__/20231019T222855.898273Z/my_datasource-test.html'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "context.view_validation_result(checkpoint_result)"
+    "# z13.web No estoy seguro si el prefijo se puede configurar\n",
+    "docs_site_urls_list[0][\"site_url\"].replace(\"blob\", \"z13.web\").replace(\"$web/\", \"\")"
    ]
   },
   {
