adicionar ejemplo de uso

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,124 +82,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from great_expectations.core.expectation_configuration import ExpectationConfiguration"
+    "from great_expectations.core.expectation_configuration import ExpectationConfiguration\n",
+    "from centraal_dataframework.tasks import task_dq\n",
+    "\n",
+    "@task_dq\n",
+    "def hello_gx(datalake, gx_toolkit, logger):\n",
+    "    \"\"\"Saluda al gx.\"\"\"\n",
+    "    source = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\")\n",
+    "    logger.info(source.head(1))\n",
+    "    logger.info(\"hello there, iam a task_dq using great expectations\")\n",
+    "    # creaciones de expectativas\n",
+    "    expectation_1 = ExpectationConfiguration(\n",
+    "        expectation_type=\"expect_table_columns_to_match_set\",\n",
+    "        kwargs={'column_set': ['Producto', '2023-07-01', '2023-08-01', '2023-09-01', '2023-10-01',\n",
+    "        '2023-11-01', '2023-12-01', '2024-01-01', '2024-02-01', '2024-03-01',\n",
+    "        '2024-04-01', '2024-05-01', '2024-06-01']},\n",
+    "        meta={\n",
+    "            \"notes\": {\n",
+    "                \"format\": \"markdown\",\n",
+    "                \"content\": \"Ejemplo de expectativa\",\n",
+    "            }\n",
+    "        },\n",
+    "    )\n",
+    "    expectation_2 = ExpectationConfiguration(\n",
+    "        expectation_type = \"expect_column_values_to_not_be_null\",\n",
+    "        kwargs = {\"column\" : \"Producto\"} \n",
+    "    )\n",
+    "\n",
+    "    expectation_3 = ExpectationConfiguration(\n",
+    "        expectation_type = \"expect_table_row_count_to_be_between\",\n",
+    "        kwargs = {\"max_value\" : 160, \"min_value\": 131},\n",
+    "        meta={\n",
+    "            \"notes\": {\n",
+    "                \"format\": \"markdown\",\n",
+    "                \"content\": \"**Ejemplo de expectativa** que va fallar\",\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "    url = gx_toolkit.run_expectations_on_df(source, \"test\", [expectation_1, expectation_2, expectation_3])\n",
+    "    print(\"reporte de expectativas\", url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(130, 13)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from centraal_dataframework.resources import context\n",
-    "scrapping_suite = context.add_or_update_expectation_suite(expectation_suite_name=\"expectation_suite_name\")\n",
-    "check_point = context.add_or_update_checkpoint(name=\"my_checkpoint\", expectation_suite_name=scrapping_suite.name)\n",
-    "datasource = context.sources.add_or_update_pandas(name='my_datasource')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# creaciones de expectativas\n",
-    "\n",
-    "expectation_1 = ExpectationConfiguration(\n",
-    "    expectation_type=\"expect_table_columns_to_match_set\",\n",
-    "    kwargs={'column_set': ['Producto', '2023-07-01', '2023-08-01', '2023-09-01', '2023-10-01',\n",
-    "       '2023-11-01', '2023-12-01', '2024-01-01', '2024-02-01', '2024-03-01',\n",
-    "       '2024-04-01', '2024-05-01', '2024-06-01']},\n",
-    "    meta={\n",
-    "        \"notes\": {\n",
-    "            \"format\": \"markdown\",\n",
-    "            \"content\": \"Ejemplo de expectativa\",\n",
-    "        }\n",
-    "    },\n",
-    ")\n",
-    "expectation_2 = ExpectationConfiguration(\n",
-    "    expectation_type = \"expect_column_values_to_not_be_null\",\n",
-    "    kwargs = {\"column\" : \"Producto\"} \n",
-    ")\n",
-    "\n",
-    "expectation_3 = ExpectationConfiguration(\n",
-    "    expectation_type = \"expect_table_row_count_to_be_between\",\n",
-    "    kwargs = {\"max_value\" : 160, \"min_value\": 131},\n",
-    "     meta={\n",
-    "        \"notes\": {\n",
-    "            \"format\": \"markdown\",\n",
-    "            \"content\": \"**Ejemplo de expectativa** que va fallar\",\n",
-    "        }\n",
-    "     }\n",
-    ")\n",
-    "\n",
-    "# adicionar las execptativas\n",
-    "for exp in [expectation_1, expectation_2, expectation_3]:\n",
-    "    scrapping_suite.add_expectation(exp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'expectations/expectation_suite_name.json'"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "context.save_expectation_suite(scrapping_suite)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_asset = datasource.add_dataframe_asset(name=\"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TAREA: hello_gx--2023-10-23 10:57:01,532-INFO-   Unnamed: 0  Producto 2023-07-01 2023-08-01 2023-09-01 2023-10-01  \\\n",
+      "0           0   9002263      237,0      700,0     3200,0     3200,0   \n",
+      "\n",
+      "  2023-11-01 2023-12-01 2024-01-01 2024-02-01 2024-03-01 2024-04-01  \\\n",
+      "0     3200,0     2920,0     2920,0      398,0      336,0      295,0   \n",
+      "\n",
+      "  2024-05-01 2024-06-01  \n",
+      "0      336,0      224,0  \n",
+      "TAREA: hello_gx--2023-10-23 10:57:01,532-INFO-   Unnamed: 0  Producto 2023-07-01 2023-08-01 2023-09-01 2023-10-01  \\\n",
+      "0           0   9002263      237,0      700,0     3200,0     3200,0   \n",
+      "\n",
+      "  2023-11-01 2023-12-01 2024-01-01 2024-02-01 2024-03-01 2024-04-01  \\\n",
+      "0     3200,0     2920,0     2920,0      398,0      336,0      295,0   \n",
+      "\n",
+      "  2024-05-01 2024-06-01  \n",
+      "0      336,0      224,0  \n",
+      "TAREA: hello_gx--2023-10-23 10:57:01,549-INFO-hello there, iam a task_dq using great expectations\n",
+      "TAREA: hello_gx--2023-10-23 10:57:01,549-INFO-hello there, iam a task_dq using great expectations\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b11c08d1994a93955097adf95f96af",
+       "model_id": "9792fcf7d61644da89c72657282dae55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,44 +169,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "result = context.run_checkpoint(\n",
-    "    checkpoint_name=check_point.name,\n",
-    "    batch_request=data_asset.build_batch_request(dataframe=info),\n",
-    "    expectation_suite_name = scrapping_suite.name\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docs_site_urls_list = context.get_docs_sites_urls(resource_identifier=list(result.run_results.keys())[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "data": {
-      "text/plain": [
-       "'https://centraaldl.z13.web.core.windows.net/validations/expectation_suite_name/__none__/20231019T222855.898273Z/my_datasource-test.html'"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reporte de expectativas https://centraaldl.z13.web.core.windows.net/validations/hello_gx_expectation_suite/__none__/20231023T155701.835505Z/hello_gx_source-hello_gx_source_test.html\n"
+     ]
     }
    ],
    "source": [
-    "# z13.web No estoy seguro si el prefijo se puede configurar\n",
-    "docs_site_urls_list[0][\"site_url\"].replace(\"blob\", \"z13.web\").replace(\"$web/\", \"\")"
+    "hello_gx()"
    ]
   },
   {
@@ -341,23 +274,46 @@
    "source": [
     "%%writefile modulo/logica_gx.py\n",
     "\"\"\"Prueba gx.\"\"\"\n",
+    "from great_expectations.core.expectation_configuration import ExpectationConfiguration\n",
     "from centraal_dataframework.tasks import task_dq\n",
     "\n",
     "\n",
     "@task_dq\n",
-    "def hello_gx(datalake, datasource, logger):\n",
+    "def hello_gx(datalake, gx_toolkit, logger):\n",
     "    \"\"\"Saluda al gx.\"\"\"\n",
     "    source = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\")\n",
     "    logger.info(source.head(1))\n",
-    "    logger.info(\"hello there, iam a task\")\n",
+    "    logger.info(\"hello there, iam a task_dq using great expectations\")\n",
+    "    # creaciones de expectativas\n",
+    "    expectation_1 = ExpectationConfiguration(\n",
+    "        expectation_type=\"expect_table_columns_to_match_set\",\n",
+    "        kwargs={'column_set': ['Producto', '2023-07-01', '2023-08-01', '2023-09-01', '2023-10-01',\n",
+    "        '2023-11-01', '2023-12-01', '2024-01-01', '2024-02-01', '2024-03-01',\n",
+    "        '2024-04-01', '2024-05-01', '2024-06-01']},\n",
+    "        meta={\n",
+    "            \"notes\": {\n",
+    "                \"format\": \"markdown\",\n",
+    "                \"content\": \"Ejemplo de expectativa\",\n",
+    "            }\n",
+    "        },\n",
+    "    )\n",
+    "    expectation_2 = ExpectationConfiguration(\n",
+    "        expectation_type = \"expect_column_values_to_not_be_null\",\n",
+    "        kwargs = {\"column\" : \"Producto\"} \n",
+    "    )\n",
     "\n",
-    "\n",
-    "@task_dq(source_name=\"logica_negocio\")\n",
-    "def hello_gx_negocio(datalake, datasource, logger):\n",
-    "    \"\"\"Saluda al gx con logica.\"\"\"\n",
-    "    source = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\")\n",
-    "    logger.info(source.head(1))\n",
-    "    logger.info(\"hello there, iam a task\")\n"
+    "    expectation_3 = ExpectationConfiguration(\n",
+    "        expectation_type = \"expect_table_row_count_to_be_between\",\n",
+    "        kwargs = {\"max_value\" : 160, \"min_value\": 131},\n",
+    "        meta={\n",
+    "            \"notes\": {\n",
+    "                \"format\": \"markdown\",\n",
+    "                \"content\": \"**Ejemplo de expectativa** que va fallar\",\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "    url = gx_toolkit.run_expectations_on_df(source, \"test\", [expectation_1, expectation_2, expectation_3])\n",
+    "    print(\"reporte de expectativas\", url)\n"
    ]
   },
   {
